# disparity_estimation

./: CMakeLists.txt  Doxyfile.in  README.md  configrun.cpp  configrun.h  costmap_creators.h  costmap_utils.cpp  costmap_utils.h  debugmatstore.cpp  debugmatstore.h  disparity_estimation.pro  disparity_map.h  disparity_range.h  disparity_range_tests.cpp  disparity_region.cpp  disparity_region.h  disparity_region_algorithms.h  disparity_region_tests.cpp  disparity_utils.cpp  disparity_utils.h  disparity_utils_tests.cpp  disparitywise_calculator.h  entropy.h  fast_array.h  genericfunctions.cpp  genericfunctions.h  initial_disparity.cpp  initial_disparity.h  intervals.h  intervals_algorithms.h  it_metrics.h  main.cpp  manual_region_optimizer.cpp  manual_region_optimizer.h  misc.h  ml_region_optimizer.cpp  ml_region_optimizer.h  refinement.cpp  refinement.h  region.cpp  (+28 more)
disparity_toolkit/: disparity_map.h  disparity_range.h  disparity_range_tests.cpp  disparity_utils.cpp  disparity_utils.h  genericfunctions.cpp  genericfunctions.h  stereotask.cpp  stereotask.h  task_collection.cpp  task_collection.h  taskanalysis.h
gui/: costmapviewer.cpp  costmapviewer.h  costmapviewer.ui  imagestore.cpp  imagestore.h  imagestore.ui  matstoreviewer.cpp  matstoreviewer.h  matstoreviewer.ui  miniplot.cpp  miniplot.h  regionwidget.cpp  regionwidget.h  regionwidget.ui  regionwindow.cpp  regionwindow.h  regionwindow.ui
loganalyzer/: analyzer.cpp  analyzer.h  analyzer.ui  comparewidget.cpp  comparewidget.h  detailviewer.cpp  detailviewer.h  detailviewer.ui  main.cpp
metrics/: entropy.h  it_metrics.h  sliding_entropy.h  sliding_gradient.cpp  sliding_gradient.h  sliding_sad.h  sliding_sncc.h
metrics/pixelwise/: converter_to_region.h  gradient_disparitywise.cpp  gradient_disparitywise.h  sad_disparitywise.h  sncc_disparitywise_calculator.cpp  sncc_disparitywise_calculator.h
neural_network/: blas_wrapper.h  data_normalizer.h  layer.h  network.h  settings.h  tests.cpp
optimizer/: manual_region_optimizer.cpp  manual_region_optimizer.h  ml_region_optimizer.cpp  ml_region_optimizer.h  ml_region_optimizer_algorithms.h  ml_region_optimizer_disp.cpp  ml_region_optimizer_disp.h  region_optimizer.cpp  region_optimizer.h
pixelmetrics/: converter_to_region.h  sncc_disparitywise_calculator.cpp
segmentation/: CMakeLists.txt  intervals.h  intervals_algorithms.h  region_descriptor.cpp  region_descriptor.h  region_descriptor_algorithms.h  segmentation.cpp  segmentation.h  segmentation_algorithms.h  segmentation_cr.cpp  segmentation_cr.h  segmentation_image.h  segmentation_ms.cpp  segmentation_ms.h  segmentation_msslic.cpp  segmentation_msslic.h  segmentation_refinement.cpp  segmentation_refinement.h  segmentation_slic.cpp  segmentation_slic.h  tests.cpp
tools/: fast_array.h  sparse_counter.h
